# bountui

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PKGBUILD  README.md  package.json
.github/: dependabot.yml
.github/workflows/: build.yaml  check-aur-build.yml  check-aur-pr.yml  create-release-pr.yaml  dependabot-auto-merge.yml
scripts/: fill-pkgbuild.sh
src/: app.rs  bountui.rs  connection_manager.rs  cross_term.rs  event_ext.rs  main.rs  mock.rs  router.rs  routes.rs
src/appframework/: component.rs  mod.rs
src/boundary/: error.rs  mod.rs  models.rs
src/boundary/client/: cli.rs  mock.rs  mod.rs  response.rs
src/boundary/client/cli/: command_runner.rs  mod.rs
src/bountui/: auth_cache.rs  connection_manager.rs  loading_page.rs  login_page.rs  mod.rs  remember_user_input.rs  routes.rs  state.rs
src/bountui/components/: connection_result_dialog.rs  credential_dialog.rs  credential_table.rs  input_dialog.rs  mod.rs  navigation_input.rs  target_detail_dialog.rs  target_details_overlay.rs  toaster.rs
src/bountui/components/table/: action.rs  filter.rs  mod.rs  scope.rs  sessions.rs  target.rs  util.rs
src/bountui/widgets/: alert.rs  connection_result_dialog.rs  loading_screen.rs  login_screen.rs  mod.rs  toast.rs
src/components/: alert.rs  alerts.rs  input_dialog.rs  mod.rs
src/components/table/: action.rs  commands.rs  filter.rs  mod.rs  scope.rs  sessions.rs  target.rs
src/components/table/scope/: mod.rs
src/ext/: mod.rs  table_state.rs
src/util/: clipboard.rs  mod.rs
src/widgets/: connection_result_dialog.rs  mod.rs
