[package]
name = "bountui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.28.1" }
crossterm = "0.28.1"
bon = "2.3.0"
thiserror = "1"
serde = { version = "1", features = ["derive", "std"] }
serde_json = "1.0.128"
tui-input = "0.11.0"
tokio = { version = "1.43.1", features = ["rt", "rt-multi-thread", "macros", "sync", "process", "io-std", "io-util"] }
tokio-util = "0.7.12"
log = "0.4.22"
futures = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }
mockall = "0.13.1"
tokio-test = "0.4.4"
arboard = "3.5.0"