[package]
name = "bountui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.30.1" }
crossterm = "0.29.0"
bon = "3.9.1"
thiserror = "2"
serde = { version = "1", features = ["derive", "std"] }
serde_json = "1.0.150"
tui-input = "0.15.3"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros", "sync", "process", "io-std", "io-util", "time"] }
tokio-util = "0.7.18"
log = "0.4.32"
futures = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }
mockall = "0.15.0"
tokio-test = "0.4.5"
arboard = "3.6.1"
anyhow = "1.0.98"
home = "0.5.12"
flexi_logger = "0.31"
uuid = {version = "1.23.3", features = ["v4"]}
unicode-width = "0.2.0"
semver = "1"
keyring = "4"
keyring-core = "1"

[dev-dependencies]
tempfile = "3.27.0"
